--- a/index.html
+++ b/index.html
@@ -4,65 +4,75 @@
     <meta charset="UTF-8" />
     <title>Enin Igor CV</title>
 </head>
-<body>
-    <table>
-        <tr>
-            <td>
-                <img src="img/avatar.jpg" width="300" height="220" alt="avatar"/>
-            </td>
-            <td>
-                <h1> Igor Enin </h1> 
-            </td>
-        </tr>
-    </table>
-
-<hr>    
-
-<h2> My contacts </h2>
-    <p>
-        <a href="https://t.me/virus199431" target="_blank">Telegram</a>
-    </p>
-    <p>
-        Discord: @Igor9431
-    </p>
-
-<hr>  
-<h2> About me </h2>
-    <p>
-        I am 30 years old, I own my own sole proprietorship, and have worked in various fields. Deciding to explore programming, I am currently actively learning this area and aiming to develop my skills in IT.
-    </p>
-
-<hr>  
-<h2> Skills </h2>
-    <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-    </ul>
-
-<hr>  
-
-<h2> Code examples </h2>
-console.log('Hello World')
-
-<hr>  
-
-<h2> Experience </h2>
-    <p>
-        No experience
-    </p>
-
-<hr>  
-
- <h2> Education </h2>
-    <ul>
-        <li>2012-2016 Ukhta State Technical University (USTU)</li>
-        <li>2024 Student RS school, stage 0</li>
-    </ul>
-    
-<hr>      
-
-<h2> English Language </h2>
-English (A0)
+    <link href="style.css" rel="stylesheet"/>
+<body class="body">
+    <header>
+        <div class="container">
+            <h1 class="header">
+                <p class="p">Igor Enin</p>
+            </h1>
+        </div>
+    </header>
+<div class="container">
+    <img class="avatar" src="img/avatar.jpg" alt="avatar"/>
+</div>        
+<div class="container"> 
+    <div class="about-me">
+        <h2 class="h2"> About me </h2>
+            <p class="p">
+                I am 30 years old, I own my own sole proprietorship, and have worked in various fields. Deciding to explore programming, I am currently actively learning this area and aiming to develop my skills in IT.
+            </p>
+    </div>
+</div> 
+<div class="container">
+    <div class="skills">
+        <h2 class="h2"> Skills </h2>
+            <ul class="ul">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </ul>
+    </div>  
+</div> 
+<div class="container"> 
+    <div class="code"> 
+        <h2 class="h2"> Code examples </h2>
+            <p class="p">console.log('Hello World')</p>
+    </div>
+</div>
+<div class="container"> 
+    <div class="experience">  
+        <h2 class="h2"> Experience </h2>
+            <p class="p">
+                No experience
+            </p>
+    </div>
+</div>         
+<div class="container">
+    <div class="education">
+        <h2 class="h2"> Education </h2>
+            <ul class="ul">
+                <li>2012-2016 Ukhta State Technical University (USTU)</li>
+                <li>2024 Student RS school, stage 0</li>
+            </ul>
+    </div>
+</div>         
+<div class="container">   
+    <div class="language"> 
+        <h2 class="h2"> English Language </h2>
+            <p class="p">English (A0)</p>
+    </div>
+</div>
+<div class="container"> 
+    <div class="contacts"> 
+        <h2 class="h2"> My contacts </h2>
+            <p class="p">
+                <a href="https://t.me/virus199431" target="_blank">Telegram</a>
+            </p>
+            <p class="p">
+                Discord: @Igor9431
+            </p>
+    </div> 
+</div> 
 </body>
 </html>
