feat: update index.html and style.css file

--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8">
     <title>Enin Igor CV</title>
+    <link href="style.css" rel="stylesheet">
 </head>
-    <link href="style.css" rel="stylesheet"/>
 <body class="body">
-    <header>
-        <div class="container">
-            <h1 class="header">
-                <p class="p">Igor Enin</p>
-            </h1>
-        </div>
+    <header class="header container">       
+            <div class="hed">
+                <h1 class="h1">Enin Igor</h1>
+            </div>
     </header>
 <div class="container">
-    <img class="avatar" src="img/avatar.jpg" alt="avatar"/>
+    <img class="avatar" src="img/avatar.jpg" alt="avatar">
 </div>        
 <div class="container"> 
     <div class="about-me">
