feat: add footer and fix errors

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
                 <h1 class="h1">Enin Igor</h1>
             </div>
     </header>
+<div class="">
 <div class="container">
     <img class="avatar" src="img/avatar.jpg" alt="avatar">
-</div>        
+</div>       
 <div class="container"> 
     <div class="about-me">
         <h2 class="h2"> About me </h2>
@@ -38,6 +39,8 @@
             <p class="p">console.log('Hello World')</p>
     </div>
 </div>
+</div>
+<div> 
 <div class="container"> 
     <div class="experience">  
         <h2 class="h2"> Experience </h2>
@@ -71,6 +74,21 @@
                 Discord: @Igor9431
             </p>
     </div> 
+</div>
 </div> 
+<footer class="footer header container">
+    <div class="social-buttons">
+        <a href="https://rs.school/courses/javascript-ru" target="_blank"><img src="img/rs-logo.svg" alt="rs-logo"></a>
+        <p>RsSchool</p> 
+    </div>
+    <div class="social-buttons">
+        <p>2024.All rights reserved.</p>
+    </div>
+    <div class="social-buttons">
+        <a href="https://github.com/Igor9431?tab=repositories" 
+target="_blank"><img src="img/github-logo.png" alt="github-logo"></a>
+            <p>Github</p>
+    </div>   
+</footer>
 </body>
 </html>
