feat: fix errors

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 </div>
 </div>
-<div> 
+<main> 
 <div class="container"> 
     <div class="experience">  
         <h2 class="h2"> Experience </h2>
@@ -75,7 +75,7 @@
             </p>
     </div> 
 </div>
-</div> 
+</main> 
 <footer class="footer header container">
     <div class="social-buttons">
         <a href="https://rs.school/courses/javascript-ru" target="_blank"><img src="img/rs-logo.svg" alt="rs-logo"></a>
