feat: fix footer

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 </div>
 </div>
-<main> 
+<main class="main"> 
 <div class="container"> 
     <div class="experience">  
         <h2 class="h2"> Experience </h2>
@@ -77,18 +77,13 @@
 </div>
 </main> 
 <footer class="footer header container">
-    <div class="social-buttons">
-        <a href="https://rs.school/courses/javascript-ru" target="_blank"><img src="img/rs-logo.svg" alt="rs-logo"></a>
-        <p>RsSchool</p> 
-    </div>
-    <div class="social-buttons">
+        <a class="social-buttons" href="https://rs.school/courses/javascript-ru" target="_blank"><img src="img/rs-logo.svg" alt="rs-logo"><p>RS School</p></a> 
         <p>2024.All rights reserved.</p>
-    </div>
-    <div class="social-buttons">
-        <a href="https://github.com/Igor9431?tab=repositories" 
-target="_blank"><img src="img/github-logo.png" alt="github-logo"></a>
+        <a class="social-buttons" href="https://github.com/Igor9431?tab=repositories" 
+target="_blank">
             <p>Github</p>
-    </div>   
+            <img src="img/github-logo.png" alt="github-logo">
+        </a>
 </footer>
 </body>
 </html>
