--- a/index.html
+++ b/index.html
@@ -6,84 +6,94 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body class="body">
-    <header class="header container">       
-            <div class="hed">
-                <h1 class="h1">Enin Igor</h1>
-            </div>
-    </header>
-<div class="">
-<div class="container">
-    <img class="avatar" src="img/avatar.jpg" alt="avatar">
-</div>       
-<div class="container"> 
-    <div class="about-me">
-        <h2 class="h2"> About me </h2>
-            <p class="p">
-                I am 30 years old, I own my own sole proprietorship, and have worked in various fields. Deciding to explore programming, I am currently actively learning this area and aiming to develop my skills in IT.
-            </p>
-    </div>
-</div> 
-<div class="container">
-    <div class="skills">
-        <h2 class="h2"> Skills </h2>
-            <ul class="ul">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
+    <header class="container header"> 
+        <nav class="menu">
+            <ul class="nav-list">
+                <li class="li"><a href="#about-me">About me</a></li>
+                <li class="li"><a href="#skills">Skills</a></li>
+                <li class="li"><a href="#code">Code examples</a></li>
+                <li class="li"><a href="#experience">Experience</a></li>
+                <li class="li"><a href="#education">Education</a></li>
+                <li class="li"><a href="#language">English Language</a></li>
+                <li class="li"><a href="#contacts">My contacts</a></li>
             </ul>
-    </div>  
-</div> 
-<div class="container"> 
-    <div class="code"> 
-        <h2 class="h2"> Code examples </h2>
-            <p class="p">console.log('Hello World')</p>
+        </nav>      
+    </header>
+<div class="igor container">
+    <h1>Enin Igor</h1>
+    
+</div>    
+<div class="">
+    <div class="container">
+        <img class="avatar" src="img/avatar.jpg" alt="avatar">
+    </div>       
+    <div class="container"> 
+        <div class="about-me" id="about-me">
+            <h2 class="h2"> About me </h2>
+                <p class="p">
+                    I am 30 years old, I own my own sole proprietorship, and have worked in various fields. Deciding to explore programming, I am currently actively learning this area and aiming to develop my skills in IT.
+                </p>
+        </div>
+    </div> 
+    <div class="container">
+        <div class="skills" id="skills">
+            <h2 class="h2"> Skills </h2>
+                <ul class="ul">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
+        </div>  
+    </div> 
+    <div class="container"> 
+        <div class="code" id="code"> 
+            <h2 class="h2"> Code examples </h2>
+                <p class="p">console.log('Hello World')</p>
+        </div>
     </div>
-</div>
 </div>
 <main class="main"> 
-<div class="container"> 
-    <div class="experience">  
-        <h2 class="h2"> Experience </h2>
-            <p class="p">
-                No experience
-            </p>
+    <div class="container"> 
+        <div class="experience" id="experience">  
+            <h2 class="h2"> Experience </h2>
+                <p class="p">
+                    No experience
+                </p>
+        </div>
+    </div>         
+    <div class="container">
+        <div class="education" id="education">
+            <h2 class="h2"> Education </h2>
+                <ul class="ul">
+                    <li>2012-2016 Ukhta State Technical University (USTU)</li>
+                    <li>2024 Student RS school, stage 0</li>
+                </ul>
+        </div>
+    </div>         
+        <div class="container">   
+            <div class="language" id="language"> 
+                <h2 class="h2"> English Language </h2>
+                    <p class="p">English (A0)</p>
+            </div>
+        </div>
+    <div class="container"> 
+        <div class="contacts" id="contacts"> 
+            <h2 class="h2"> My contacts </h2>
+                <p class="p">
+                    <a href="https://t.me/virus199431" target="_blank">Telegram</a>
+                </p>
+                <p class="p">
+                    Discord: @Igor9431
+                </p>
+        </div> 
     </div>
-</div>         
-<div class="container">
-    <div class="education">
-        <h2 class="h2"> Education </h2>
-            <ul class="ul">
-                <li>2012-2016 Ukhta State Technical University (USTU)</li>
-                <li>2024 Student RS school, stage 0</li>
-            </ul>
-    </div>
-</div>         
-<div class="container">   
-    <div class="language"> 
-        <h2 class="h2"> English Language </h2>
-            <p class="p">English (A0)</p>
-    </div>
-</div>
-<div class="container"> 
-    <div class="contacts"> 
-        <h2 class="h2"> My contacts </h2>
-            <p class="p">
-                <a href="https://t.me/virus199431" target="_blank">Telegram</a>
-            </p>
-            <p class="p">
-                Discord: @Igor9431
-            </p>
-    </div> 
-</div>
 </main> 
 <footer class="footer header container">
-        <a class="social-buttons" href="https://rs.school/courses/javascript-ru" target="_blank"><img src="img/rs-logo.svg" alt="rs-logo"><p>RS School</p></a> 
-        <p>2024.All rights reserved.</p>
-        <a class="social-buttons" href="https://github.com/Igor9431?tab=repositories" 
-target="_blank">
-            <p>Github</p>
-            <img src="img/github-logo.png" alt="github-logo">
-        </a>
+    <a class="social-buttons" href="https://rs.school/courses/javascript-ru" target="_blank"><img src="img/rs-logo.svg" alt="rs-logo"><p>RS School</p></a> 
+        <p class="data">2024.All rights reserved.</p>
+    <a class="social-buttons" href="https://github.com/Igor9431?tab=repositories" target="_blank">
+        <p>Github</p>
+        <img src="img/github-logo.png" alt="github-logo"></a>
 </footer>
 </body>
 </html>
